txt/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: txt
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: txt
  template:
    metadata:
      labels:
        app: txt
    spec:
      containers:
        - name: txt
          image: ghcr.io/pmh-only/txt:latest
          volumeMounts:
            - mountPath: /data/
              name: persistent
      volumes:
        - name: persistent
          persistentVolumeClaim:
            claimName: txt-pvc
