txt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: txt-service
spec:
  selector:
    app: txt
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
